--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,18 +3,10 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "react-app",
-    "airbnb",
-    "airbnb-typescript",
-    "plugin:import/typescript",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["react-app", "airbnb", "airbnb-typescript", "plugin:import/typescript", "plugin:prettier/recommended"],
   "overrides": [
     {
-      "files": [
-        "**/*.ts?(x)"
-      ]
+      "files": ["**/*.ts?(x)"]
     }
   ],
   "parser": "@typescript-eslint/parser",
@@ -23,11 +15,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
     "quotes": [
       "warn",
@@ -43,9 +31,12 @@
         "avoidEscape": true
       }
     ],
-    "react/jsx-uses-react": ["off"],
-    "react/react-in-jsx-scope": ["off"],
-    "react/jsx-props-no-spreading": ["warn"],
-    "no-shadow": "off"
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "react/jsx-uses-react": ["off"]
   }
 }
