--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
-      "npm run eslint --fix"
+      "npm run lint:fix"
     ],
     "*.{md,json}": [
       "prettier --write"
