UI: Added Redux Saga, SCSS

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     "react/jsx-uses-react": ["off"],
     "react/function-component-definition": ["off"],
     "import/prefer-default-export": ["off"],
-    "react/jsx-props-no-spreading": ["off"]
+    "react/jsx-props-no-spreading": ["off"],
+    "no-param-reassign": ["off"]
   }
 }
